Add Animations, Start with Conclusion

--- a/index.tex
+++ b/index.tex
@@ -214,10 +214,10 @@ The paradigm of \textbf{Object Oriented Programming} is less prominently introdu
 
 Even though Salvaneschi et al. assume in their paper the Observer design pattern as common knowledge in their expert audience, we would have appreciated an introduction on the same level as RP received. The group further reduces the OOP paradigm to one sole case which is disputable. A more differentiated approach where i.e. the patterns root in OOP is noted, but then not used throughout the report as synonym for the pattern itself would have been received well.
 
-\section{Practical Application of RP}
+\section{Application in Frontend Engineering}
 \label{sec:practical-application}
 
-The previously reviewed paper by Salvaneschi et al. explores how RP changes the comprehensibility of code for synthetic and interactive applications as well as for graphical animations \cite{7827078}. Hence all of these problems can ultimately be implemented with RP and the Observer pattern likewise, there is no measure given when the alluded tradeoffs like the additional layer of abstraction (RP) or inversion of control (Observer) outweigh gained benefits. In order to answer the research question \emph{RQ2.2 ``When should RP be considered, and when not?''}, we will present two technical scenarios in context of frontend engineering for synthetic and interactive applications in the following. Libraries like \emph{react-spring}\footnote{\url{https://www.react-spring.io/}} provide APIs and tools based on RP principles enabling complex animation behaviors. Since effective graphical animations in frontend engineering are most commonly implemented using CSS animations\footnote{\url{https://drafts.csswg.org/css-animations-1/}} though, we will not investigate further in comparing the Observer pattern and RP in regards of graphical animations.
+The previously reviewed paper by Salvaneschi et al. explores how RP changes the comprehensibility of code for synthetic and interactive applications as well as for graphical animations \cite{7827078}. Hence all of these problems can ultimately be implemented with RP and the Observer pattern likewise, there is no measure given when the alluded tradeoffs like the additional layer of abstraction (RP) or inversion of control (Observer) outweigh gained benefits. In order to answer the research question \emph{RQ2.2 ``When should RP be considered, and when not?''}, we will present two technical scenarios in context of frontend engineering for synthetic and interactive applications in the following. The current draft of the Web Animations API\footnote{\url{https://drafts.csswg.org/web-animations/}} or various libraries (i.e. \emph{react-spring}\footnote{\url{https://www.react-spring.io/}}) provide interfaces based on RP principles enabling sophisticated animation behaviors. Since effective graphical animations in frontend engineering are most commonly done using CSS Animations\footnote{\url{https://drafts.csswg.org/css-animations-1/}} up to today though, we will not compare the Observer pattern and RP in regards of graphical animations any further.
 
 \subsection{Modelling Data Flow}
 
@@ -323,17 +323,40 @@ S2 contrasts with S1 strongly by intention. The problem is more simplistic on on
 
 So, when should RP used and when should the Observer design pattern be applied ultimately? We refuse to take position for one or the other. Hence we support that RP code is more comprehensible when it comes to the description of complex succession of data transformations over time as Salvaneschi et al. proofed in their study. In contrary we also cannot approve its blind application for every problem given. As exemplified with S2 previously, there are situations where the Observer pattern has its benefits over RP too.
 
+This absence of any solid argumentation leaves the individual engineer facing the choice between the Observer pattern and RP with a lot of room for interpretation. We attempt to improve on this situation by providing a set of criteria with Table \ref{tab:criteria}. Each criterion states one or more questions. We do not intend to give simple \emph{``if-this-then-that''} recipes though. In fact, these questions purpose are to initiate valuable discussions when a team faces the decision between the Observer pattern and RP.
+
+\begin{table}[H]
+	\begin{tabularx}{\textwidth}{ |l|X| }
+		\hline
+		\textbf{Cardinality}      & How many components consume emitted values? Are there many? Is there only one? \\ \hline
+		\textbf{Change Frequency} & How many values are expected to emitted over time?\\ \hline
+		\textbf{Stimuli Source}   & Where do emitted values come from? Are they triggered by user interaction? Do they originate in an external system which we subscribe to? Which paradigms do these sources build their API upon? \\ \hline
+		\textbf{Testability}      & Is it enough to apply black box testing to your implementation? Do you want to break a more complex implementation apart and test each component individually? \\ \hline
+		\textbf{Transformation}   & How complex are the transformations which need to be applied on emitted values? Are values from multiple sources needed to be combined? What are the requirements of these combinations?\\ \hline
+	\end{tabularx}
+	\caption{Criteria Catalog ``Decision Observer or RP''}
+	\label{tab:criteria}
+\end{table}
+
+
 \subsection{Alternatives}
 
-The W3C DOM API uses the Observer design pattern with the \mintinline{JavaScript}{EventTarget} interface extensively as we demonstrated repeatedly. The JavaScript \mintinline{JavaScript}{Promise} leverages RP for its API and can be used to describe asynchronous operations since the wide adoption of the specification by major browsers and JavaScript engines. We are convinced that neither the Observer pattern nor RP are easily to be replaced in the field of frontend engineering. We were further not able to identify any trends for a concrete alternative at the time of writing this paper.
+The W3C DOM API uses the Observer design pattern with the \mintinline{JavaScript}{EventTarget} interface extensively as we demonstrated repeatedly. The JavaScript \mintinline{JavaScript}{Promise} leverages RP for its API and can be used to describe asynchronous operations since the wide adoption of its specification by major browsers and JavaScript engines. We are convinced that neither the Observer pattern nor RP are easily to be replaced in the field of frontend engineering. We were further not able to identify any trends for a concrete alternative at the time of writing this paper.
 
 \subsection{Outlook}
 
-We hypothesised about when the application of RP might be worth or when better stick with a more traditional Observer pattern based approach in the previous Subsection \ref{sec:when-rp-when-observer}. A study providing empirical insight in the matter of the presented scenarios could yield valuable results to support software projects facing the question stated in \emph{RQ2.2}.
+We hypothesised about when the application of RP might be worth or when better stick with a more traditional Observer pattern based approach in the previous Subsection \ref{sec:when-rp-when-observer}. A study providing empirical insight in the matter of the presented scenarios and decision criteria in Table \ref{tab:criteria} could yield valuable results to support software projects facing the question stated in \emph{RQ2.2}.
 
-Our own experiences using RP for developing frontend applications using \emph{RxJS}\footnote{\url{https://rxjs.dev/}} resonates well with one of the proposed follow up topics by Salvaneschi et al.: ``\emph{Understanding how programmers work is fundamental to provide better tool support, especially IDEs, a research area which is vastly unexplored for RP.}''\cite{7827078} As the complexity of data flows, their transformations and dependencies increase, the need for better tooling grows likewise. Even though support libraries like \emph{rxjs-spy}\footnote{\url{https://cartant.github.io/rxjs-spy/}} or the inspection capabilities of \emph{BaconJS} do help up to some extent during debugging, we agree with Salvaneschi et al. that improvements in this field could boost the adoption and productivity of RP further.
+
+The implementation of high-performance graphical animations in frontend engineering is usually done with CSS Animations today. It allows the implementation of simple transitions in an easy way. More complex animations which need to be synchronized to the applications logic demand for more sophisticated APIs than CSS Animations provides. JavaScript libraries like \emph{react-spring} do provide such RP based APIs today, though cannot calculate animated values as CPU efficient as the browsers CSS engine can. The W3C has a promising draft for the Web Animations API in development. We are sure this would be an interesting area for future research.
+
+Our own experiences using RP for developing frontend applications using \emph{RxJS}\footnote{\url{https://rxjs.dev/}} resonates well with one of the proposed follow up topics by Salvaneschi et al.: ``\emph{Understanding how programmers work is fundamental to provide better tool support, especially IDEs, a research area which is vastly unexplored for RP.}'' \cite{7827078} As the complexity of data flows, their transformations and dependencies increase, the need for better tooling grows likewise. Even though support libraries like \emph{rxjs-spy}\footnote{\url{https://cartant.github.io/rxjs-spy/}} or the inspection capabilities of \emph{BaconJS} do help up to some extent during debugging, we agree with Salvaneschi et al. that improvements in this field could boost the adoption and productivity of RP further.
 
 \section{Conclusion}
+
+With this paper we revisited the study of Salvaneschi et al. \cite{7827078}. We did a review of their work in context of design sciences and empirical software engineering. Furthermore we looked into how their documentation withstands the FAIR research principles and what could be improved in regards of the amendments for computer science research projects proposed by Hasselbring et al. \cite{2019arXiv190805986H}.
+
+
 \begin{itemize}
 	\item Revisit Paper Review
 	\item Revisit Practical Application of rp
