--- a/index.tex
+++ b/index.tex
@@ -13,7 +13,7 @@
 \begin{centering}
 	\Large{Master Seminar}
 	\par
-	\Huge{Design Sciences and\\Empirical Software Engineering}
+	\Huge{Reactive Applications in\\Frontend Engineering Today}
 	\par
 	\vspace{2ex}
 
@@ -38,7 +38,7 @@
 		\vspace{2ex}
 
 		\small{
-			\textbf{Keywords}: Design Science, Empirical Software Engineering, FAIR Research Principles, Reactive Programming, Object Oriented Programming
+			\textbf{Keywords}: Frontend Engineering, Reactive Programming, Object Oriented Programming, Design Science, Empirical Software Engineering, FAIR Research Principles
 		}
 		\par
 		\vspace{4ex}
