--- a/index.tex
+++ b/index.tex
@@ -6,7 +6,7 @@
 
 \setminted{autogobble=true, tabsize=2, linenos=true, frame=single, breaklines=true}
 
-\newcommand{\version}{v0.2 DRAFT}
+\newcommand{\version}{v0.3 PREPUBLISH}
 
 
 \begin{document}
@@ -32,13 +32,13 @@
 
 	\begin{quotation}
 		\small{
-			\textbf{Abstract}---\input{./abstract.tex}
+			\noindent\textbf{Abstract}---\input{./abstract.tex}
 		}
 		\par
 		\vspace{2ex}
 
 		\small{
-			\textbf{Keywords}: Frontend Engineering, Reactive Programming, Object Oriented Programming, Design Science, Empirical Software Engineering, FAIR Research Principles
+			\noindent\textbf{Keywords}: Frontend Engineering, Reactive Programming, Object Oriented Programming, Design Science, Empirical Software Engineering, FAIR Research Principles
 		}
 		\par
 		\vspace{4ex}
